# HaskellTutorials

./: .gitignore  HaskellTutorials.cabal  LICENSE  Main.hs  README.md  r  update
src/Chapter5/: ExModule1.hs  Main.hs  Section52.hs
src/Chapter5/Examples/: ExModule1.hs  Main.hs
src/Chapter5/Examples/Ex/: ExModule2.hs
