name:                HaskellTutorials
version:             0.0.0.2
synopsis:            Haskell Tutorials by Evgeny Ukhanov
description:         Step-by-Step tutorials at learning process
homepage:            https://github.com/mrLSD/HaskellTutorials
license:             MIT
license-file:        LICENSE
author:              Evgeny Ukganov
maintainer:          mrlsd@ya.ru
copyright:           Evgeny Ukhanov (c) 2014
category:            Tutorials
build-type:          Simple
cabal-version:       >=1.10

executable HaskellTutorials
  main-is:             Main.hs
  build-depends:       
                base                    >=4.6 && <4.7, 
                text, 
                cmdargs
  hs-source-dirs:      ./ 
                       src
                      
  default-language:    Haskell2010
  ghc-options:         -W -H14m
